fix: curtain lead visible on mobile

--- a/src/scss/includes/components/_curtain.scss
+++ b/src/scss/includes/components/_curtain.scss
@@ -40,7 +40,7 @@
 
 
         @include breakpoint(not-desktop) {
-            opacity: 0;
+            opacity: 0 !important;
         }
 
 
